--- a/twitter/package.json
+++ b/twitter/package.json
@@ -26,5 +26,8 @@
         "vite": "^4.3.9",
         "vue": "^3.2.37",
         "vue-loader": "^16.8.3"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.2"
     }
 }
